@@ -29,7 +29,17 @@
 
 package ar.com.fdvs.dj.test.domain.chart.builder;
 
-import ar.com.fdvs.dj.domain.*;
+import java.awt.Color;
+import java.util.HashMap;
+import java.util.Map;
+
+import ar.com.fdvs.dj.domain.CustomExpression;
+import ar.com.fdvs.dj.domain.DJCalculation;
+import ar.com.fdvs.dj.domain.DJHyperLink;
+import ar.com.fdvs.dj.domain.DynamicJasperDesign;
+import ar.com.fdvs.dj.domain.DynamicReport;
+import ar.com.fdvs.dj.domain.StringExpression;
+import ar.com.fdvs.dj.domain.Style;
 import ar.com.fdvs.dj.domain.builders.ColumnBuilder;
 import ar.com.fdvs.dj.domain.builders.DynamicReportBuilder;
 import ar.com.fdvs.dj.domain.builders.GroupBuilder;
@@ -38,9 +48,12 @@ import ar.com.fdvs.dj.domain.chart.DJChartOptions;
 import ar.com.fdvs.dj.domain.chart.NumberExpression;
 import ar.com.fdvs.dj.domain.chart.builder.DJBarChartBuilder;
 import ar.com.fdvs.dj.domain.chart.plot.DJAxisFormat;
-import ar.com.fdvs.dj.domain.constants.*;
+import ar.com.fdvs.dj.domain.constants.Border;
 import ar.com.fdvs.dj.domain.constants.Font;
+import ar.com.fdvs.dj.domain.constants.GroupLayout;
+import ar.com.fdvs.dj.domain.constants.HorizontalAlign;
 import ar.com.fdvs.dj.domain.constants.Transparency;
+import ar.com.fdvs.dj.domain.constants.VerticalAlign;
 import ar.com.fdvs.dj.domain.entities.DJGroup;
 import ar.com.fdvs.dj.domain.entities.columns.AbstractColumn;
 import ar.com.fdvs.dj.domain.entities.columns.PropertyColumn;
@@ -48,25 +61,23 @@ import ar.com.fdvs.dj.domain.hyperlink.LiteralExpression;
 import ar.com.fdvs.dj.test.BaseDjReportTest;
 import net.sf.jasperreports.charts.design.JRDesignBarPlot;
 import net.sf.jasperreports.charts.design.JRDesignCategoryDataset;
+import net.sf.jasperreports.charts.design.JRDesignChart;
+import net.sf.jasperreports.charts.type.EdgeEnum;
 import net.sf.jasperreports.engine.JRFont;
-import net.sf.jasperreports.engine.design.JRDesignChart;
 import net.sf.jasperreports.engine.design.JRDesignGroup;
 import net.sf.jasperreports.engine.design.JRDesignVariable;
 import net.sf.jasperreports.engine.type.LineStyleEnum;
 import net.sf.jasperreports.view.JasperViewer;
 
-import java.awt.*;
-import java.util.HashMap;
-import java.util.Map;
-
 public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
-	private DynamicReportBuilder drb; 
+	private DynamicReportBuilder drb;
 	private JRDesignChart chart;
-	
-	protected void setUp() throws Exception {
+
+	@Override
+    protected void setUp() throws Exception {
         super.setUp();
         drb = new DynamicReportBuilder();
-		Style headerStyle = new Style();
+		final Style headerStyle = new Style();
 		headerStyle.setFont(Font.VERDANA_MEDIUM_BOLD);
 		headerStyle.setBorderBottom(Border.PEN_2_POINT());
 		headerStyle.setHorizontalAlign(HorizontalAlign.CENTER);
@@ -74,28 +85,30 @@ public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
 		headerStyle.setBackgroundColor(Color.DARK_GRAY);
 		headerStyle.setTextColor(Color.WHITE);
 		headerStyle.setTransparency(Transparency.OPAQUE);
-		drb.setDefaultStyles(null, null, headerStyle, null);	
-		
-		AbstractColumn columnState = ColumnBuilder.getNew()
+		drb.setDefaultStyles(null, null, headerStyle, null);
+
+		final AbstractColumn columnState = ColumnBuilder.getNew()
 		.setColumnProperty("state", String.class.getName()).setTitle(
-				"State").setWidth(new Integer(85)).build();
-		AbstractColumn columnBranch = ColumnBuilder.getNew()
+				"State").setWidth(85).build();
+		final AbstractColumn columnBranch = ColumnBuilder.getNew()
 		.setColumnProperty("branch", String.class.getName()).setTitle(
-				"Branch").setWidth(new Integer(85)).build();
-		AbstractColumn columnaQuantity = ColumnBuilder.getNew()
+				"Branch").setWidth(85).build();
+		final AbstractColumn columnaQuantity = ColumnBuilder.getNew()
 		.setColumnProperty("quantity", Long.class.getName()).setTitle(
-				"Quantity").setWidth(new Integer(80)).build();
-		AbstractColumn columnAmount = ColumnBuilder.getNew().
+				"Quantity").setWidth(80).build();
+		final AbstractColumn columnAmount = ColumnBuilder.getNew().
                 setCustomExpression(new CustomExpression() {
+                    @Override
                     public Object evaluate(Map fields, Map variables, Map parameters) {
                         return fields.get("amount");
                     }
 
+                    @Override
                     public String getClassName() {
                         return Float.class.getName();
                     }
                 })
-                .setTitle("Amount").setWidth(new Integer(90)).build();
+                .setTitle("Amount").setWidth(90).build();
 
 		drb.addColumn(columnState);
 		drb.addColumn(columnBranch);
@@ -103,33 +116,33 @@ public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
 		drb.addColumn(columnAmount);
 
         drb.addField("amount",Float.class.getName());
-		
-		GroupBuilder gb1 = new GroupBuilder();
-		DJGroup g1 = gb1.setCriteriaColumn((PropertyColumn) columnState)
+
+		final GroupBuilder gb1 = new GroupBuilder();
+		final DJGroup g1 = gb1.setCriteriaColumn((PropertyColumn) columnState)
 				.addFooterVariable(columnAmount,DJCalculation.SUM)
-			.addFooterVariable(columnaQuantity,DJCalculation.SUM) 
+			.addFooterVariable(columnaQuantity,DJCalculation.SUM)
 			.addVariable("group_state_name", columnState, DJCalculation.FIRST)
 			.setGroupLayout(GroupLayout.DEFAULT)
-			.build();		
-/*		GroupBuilder gb2 = new GroupBuilder(); 
+			.build();
+/*		GroupBuilder gb2 = new GroupBuilder();
   		DJGroup g2 = gb2.setCriteriaColumn((PropertyColumn) columnBranch)
-				.setGroupLayout(GroupLayout.VALUE_FOR_EACH) 
+				.setGroupLayout(GroupLayout.VALUE_FOR_EACH)
 				.build();*/
-		
+
 		drb.addGroup(g1);
 		//drb.addGroup(g2);
-		
+
 		drb.setUseFullPageWidth(true);
-		
-		DJAxisFormat categoryAxisFormat = new DJAxisFormat("category");
+
+		final DJAxisFormat categoryAxisFormat = new DJAxisFormat("category");
 		categoryAxisFormat.setLabelFont(Font.ARIAL_SMALL);
 		categoryAxisFormat.setLabelColor(Color.DARK_GRAY);
 		categoryAxisFormat.setTickLabelFont(Font.ARIAL_SMALL);
 		categoryAxisFormat.setTickLabelColor(Color.DARK_GRAY);
 		categoryAxisFormat.setTickLabelMask("");
 		categoryAxisFormat.setLineColor(Color.DARK_GRAY);
-		
-		DJAxisFormat valueAxisFormat = new DJAxisFormat("value");
+
+		final DJAxisFormat valueAxisFormat = new DJAxisFormat("value");
 		valueAxisFormat.setLabelFont(Font.ARIAL_SMALL);
 		valueAxisFormat.setLabelColor(Color.DARK_GRAY);
 		valueAxisFormat.setTickLabelFont(Font.ARIAL_SMALL);
@@ -137,9 +150,9 @@ public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
 		valueAxisFormat.setTickLabelMask("#,##0.0");
 		valueAxisFormat.setLineColor(Color.DARK_GRAY);
 		valueAxisFormat.setRangeMaxValueExpression(new NumberExpression(100000));
-		
-		DJChart djChart = new DJBarChartBuilder()
-		//chart		
+
+		final DJChart djChart = new DJBarChartBuilder()
+		//chart
 		.setX(20)
 		.setY(10)
 		.setWidth(500)
@@ -148,8 +161,9 @@ public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
 		.setBackColor(Color.LIGHT_GRAY)
 		.setShowLegend(true)
 		.setPosition(DJChartOptions.POSITION_FOOTER)
-		.setTitle(new StringExpression() {			
-			public Object evaluate(Map fields, Map variables, Map parameters) {
+		.setTitle(new StringExpression() {
+			@Override
+            public Object evaluate(Map fields, Map variables, Map parameters) {
 				return variables.get("group_state_name");
 			}
 		})
@@ -179,23 +193,24 @@ public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
 		.setValueAxisFormat(valueAxisFormat)
 		.build();
 		drb.addChart(djChart);
-		
-		DJHyperLink djlink = new DJHyperLink();
+
+		final DJHyperLink djlink = new DJHyperLink();
 		djlink.setExpression(new StringExpression() {
-			public Object evaluate(Map fields, Map variables, Map parameters) {				
+			@Override
+            public Object evaluate(Map fields, Map variables, Map parameters) {
 				return "http://thisIsAURL?count=" + variables.get("REPORT_COUNT");
 			}
 		});
-		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));		
+		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));
 		djChart.setLink(djlink);
-		
-		Map<AbstractColumn, JRDesignVariable> vars = new HashMap<AbstractColumn, JRDesignVariable>();
+
+		final Map<AbstractColumn, JRDesignVariable> vars = new HashMap<>();
 		vars.put(columnaQuantity, new JRDesignVariable());
 		vars.put(columnAmount, new JRDesignVariable());
-		JRDesignGroup group = new JRDesignGroup();
+		final JRDesignGroup group = new JRDesignGroup();
 		chart = djChart.transform(new DynamicJasperDesign(), "", group, group, vars, 0);
 	}
-	
+
 	public void testChart() {
 		assertEquals(20, chart.getX());
 		assertEquals(10, chart.getY());
@@ -205,65 +220,66 @@ public class BarChartBuilderExpressionColumnTest extends BaseDjReportTest {
 		assertEquals(Boolean.TRUE, chart.getShowLegend());
 		assertNotNull(chart.getTitleExpression().getText());
 		assertEquals(Color.DARK_GRAY, chart.getTitleColor());
-		testFont(Font.ARIAL_BIG_BOLD, chart.getTitleFont());		
+		testFont(Font.ARIAL_BIG_BOLD, chart.getTitleFont());
 		assertNotNull(chart.getSubtitleExpression().getText());
 		assertEquals(Color.DARK_GRAY, chart.getSubtitleColor());
 		testFont(Font.COURIER_NEW_BIG_BOLD, chart.getSubtitleFont());
 		assertEquals(Color.DARK_GRAY, chart.getLegendColor());
 		testFont(Font.COURIER_NEW_MEDIUM_BOLD, chart.getLegendFont());
 		assertEquals(Color.WHITE, chart.getLegendBackgroundColor());
-		assertEquals(new Byte(DJChartOptions.EDGE_BOTTOM), chart.getLegendPositionValue().getValueByte() );
-		assertEquals(new Byte(DJChartOptions.EDGE_TOP), chart.getTitlePositionValue().getValueByte());
-		assertEquals(LineStyleEnum.getByValue(new Byte(DJChartOptions.LINE_STYLE_DOTTED)), chart.getLineBox().getPen().getLineStyleValue());
+        assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_BOTTOM], chart.getLegendPosition());
+        assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_TOP], chart.getTitlePosition());
+        assertEquals(LineStyleEnum.values()[DJChartOptions.LINE_STYLE_DOTTED], chart.getLineBox().getPen().getLineStyle());
 		assertEquals(1f, chart.getLineBox().getPen().getLineWidth());
 		assertEquals(Color.DARK_GRAY, chart.getLineBox().getPen().getLineColor());
-		assertEquals(new Integer(5), chart.getLineBox().getPadding());
+		assertEquals(Integer.valueOf(5), chart.getLineBox().getPadding());
 	}
-	
+
 	public void testDataset() {
-		JRDesignCategoryDataset dataset = (JRDesignCategoryDataset) chart.getDataset();
+		final JRDesignCategoryDataset dataset = (JRDesignCategoryDataset) chart.getDataset();
 		assertEquals(2, dataset.getSeriesList().size());
 		assertNotNull(dataset.getSeries()[0].getLabelExpression().getText());
 		assertNotNull(dataset.getSeries()[0].getSeriesExpression().getText());
 	}
-	
+
 	public void testPlot() {
-		JRDesignBarPlot plot = (JRDesignBarPlot) chart.getPlot();
+		final JRDesignBarPlot plot = (JRDesignBarPlot) chart.getPlot();
 		assertEquals(Boolean.TRUE, plot.getShowTickMarks());
 		assertEquals(Boolean.TRUE, plot.getShowTickLabels());
 		assertEquals(Boolean.FALSE, plot.getShowLabels());
-		
+
 		assertNotNull(plot.getCategoryAxisLabelExpression().getText());
 		testFont(Font.ARIAL_SMALL, plot.getCategoryAxisLabelFont());
-		assertEquals(Color.DARK_GRAY, plot.getCategoryAxisLabelColor());		
+		assertEquals(Color.DARK_GRAY, plot.getCategoryAxisLabelColor());
 		testFont(Font.ARIAL_SMALL, plot.getCategoryAxisTickLabelFont());
 		assertEquals(Color.DARK_GRAY, plot.getCategoryAxisTickLabelColor());
 		assertEquals("", plot.getCategoryAxisTickLabelMask());
 		assertEquals(Color.DARK_GRAY, plot.getCategoryAxisLineColor());
-		
+
 		assertNotNull(plot.getValueAxisLabelExpression().getText());
 		testFont(Font.ARIAL_SMALL, plot.getValueAxisLabelFont());
-		assertEquals(Color.DARK_GRAY, plot.getValueAxisLabelColor());		
+		assertEquals(Color.DARK_GRAY, plot.getValueAxisLabelColor());
 		testFont(Font.ARIAL_SMALL, plot.getValueAxisTickLabelFont());
 		assertEquals(Color.DARK_GRAY, plot.getValueAxisTickLabelColor());
 		assertEquals("#,##0.0", plot.getValueAxisTickLabelMask());
 		assertEquals(Color.DARK_GRAY, plot.getValueAxisLineColor());
 		assertNotNull(plot.getRangeAxisMaxValueExpression().getText());
 	}
-	
-	public DynamicReport buildReport() throws Exception {		
+
+	@Override
+    public DynamicReport buildReport() throws Exception {
 		return drb.build();
 	}
 
 	private void testFont(Font djFont, JRFont jrFont) {
 		assertEquals(djFont.getFontName(), jrFont.getFontName());
-		assertEquals(djFont.getFontSize(), jrFont.getFontsize());
+		assertEquals(djFont.getFontSize(), jrFont.getFontSize());
 		assertEquals(djFont.isBold(), jrFont.isBold());
 		assertEquals(djFont.isItalic(), jrFont.isItalic());
 	}
-	
+
 	public static void main(String[] args) throws Exception {
-		BarChartBuilderExpressionColumnTest test = new BarChartBuilderExpressionColumnTest();
+		final BarChartBuilderExpressionColumnTest test = new BarChartBuilderExpressionColumnTest();
 		test.setUp();
 		test.testReport();
 		JasperViewer.viewReport(test.jp);
