@@ -33,14 +33,6 @@ import java.awt.Color;
 import java.util.HashMap;
 import java.util.Map;
 
-import net.sf.jasperreports.charts.design.JRDesignScatterPlot;
-import net.sf.jasperreports.charts.design.JRDesignXyDataset;
-import net.sf.jasperreports.engine.JRFont;
-import net.sf.jasperreports.engine.design.JRDesignChart;
-import net.sf.jasperreports.engine.design.JRDesignGroup;
-import net.sf.jasperreports.engine.design.JRDesignVariable;
-import net.sf.jasperreports.engine.type.LineStyleEnum;
-import net.sf.jasperreports.view.JasperViewer;
 import ar.com.fdvs.dj.domain.DJHyperLink;
 import ar.com.fdvs.dj.domain.DynamicJasperDesign;
 import ar.com.fdvs.dj.domain.DynamicReport;
@@ -61,16 +53,26 @@ import ar.com.fdvs.dj.domain.entities.columns.AbstractColumn;
 import ar.com.fdvs.dj.domain.entities.columns.PropertyColumn;
 import ar.com.fdvs.dj.domain.hyperlink.LiteralExpression;
 import ar.com.fdvs.dj.test.BaseDjReportTest;
+import net.sf.jasperreports.charts.design.JRDesignChart;
+import net.sf.jasperreports.charts.design.JRDesignScatterPlot;
+import net.sf.jasperreports.charts.design.JRDesignXyDataset;
+import net.sf.jasperreports.charts.type.EdgeEnum;
+import net.sf.jasperreports.engine.JRFont;
+import net.sf.jasperreports.engine.design.JRDesignGroup;
+import net.sf.jasperreports.engine.design.JRDesignVariable;
+import net.sf.jasperreports.engine.type.LineStyleEnum;
+import net.sf.jasperreports.view.JasperViewer;
 
 public class ScatterChartBuilderTest extends BaseDjReportTest {
-	private DynamicReportBuilder drb; 
+	private DynamicReportBuilder drb;
 	private JRDesignChart chart;
-	
-	protected void setUp() throws Exception {
+
+	@Override
+    protected void setUp() throws Exception {
         super.setUp();
         drb = new DynamicReportBuilder();
 
-		Style headerStyle = new Style();
+		final Style headerStyle = new Style();
 		headerStyle.setFont(Font.VERDANA_MEDIUM_BOLD);
 		headerStyle.setBorderBottom(Border.PEN_2_POINT());
 		headerStyle.setHorizontalAlign(HorizontalAlign.CENTER);
@@ -78,42 +80,42 @@ public class ScatterChartBuilderTest extends BaseDjReportTest {
 		headerStyle.setBackgroundColor(Color.DARK_GRAY);
 		headerStyle.setTextColor(Color.WHITE);
 		headerStyle.setTransparency(Transparency.OPAQUE);
-		drb.setDefaultStyles(null, null, headerStyle, null);			
-		
-		AbstractColumn columnCode = ColumnBuilder.getNew()
+		drb.setDefaultStyles(null, null, headerStyle, null);
+
+		final AbstractColumn columnCode = ColumnBuilder.getNew()
 		.setColumnProperty("id", Long.class.getName()).setTitle("ID")
-		.setWidth(new Integer(40)).build();
-		AbstractColumn columnaQuantity = ColumnBuilder.getNew()
+		.setWidth(40).build();
+		final AbstractColumn columnaQuantity = ColumnBuilder.getNew()
 		.setColumnProperty("quantity", Long.class.getName()).setTitle(
-				"Quantity").setWidth(new Integer(80)).build();
-		AbstractColumn columnAmount = ColumnBuilder.getNew()
+				"Quantity").setWidth(80).build();
+		final AbstractColumn columnAmount = ColumnBuilder.getNew()
 		.setColumnProperty("amount", Float.class.getName()).setTitle(
-				"Amount").setWidth(new Integer(90)).build();
+				"Amount").setWidth(90).build();
 
 		drb.addColumn(columnCode);
 		drb.addColumn(columnaQuantity);
 		drb.addColumn(columnAmount);
-		
+
 		drb.setUseFullPageWidth(true);
-		
-		DJAxisFormat xAxisFormat = new DJAxisFormat("x");
+
+		final DJAxisFormat xAxisFormat = new DJAxisFormat("x");
 		xAxisFormat.setLabelFont(Font.ARIAL_SMALL);
 		xAxisFormat.setLabelColor(Color.DARK_GRAY);
 		xAxisFormat.setTickLabelFont(Font.ARIAL_SMALL);
 		xAxisFormat.setTickLabelColor(Color.DARK_GRAY);
 		xAxisFormat.setTickLabelMask("#,###.#");
 		xAxisFormat.setLineColor(Color.DARK_GRAY);
-		
-		DJAxisFormat yAxisFormat = new DJAxisFormat("y");
+
+		final DJAxisFormat yAxisFormat = new DJAxisFormat("y");
 		yAxisFormat.setLabelFont(Font.ARIAL_SMALL);
 		yAxisFormat.setLabelColor(Color.DARK_GRAY);
 		yAxisFormat.setTickLabelFont(Font.ARIAL_SMALL);
 		yAxisFormat.setTickLabelColor(Color.DARK_GRAY);
 		yAxisFormat.setTickLabelMask("#,##0.0");
 		yAxisFormat.setLineColor(Color.DARK_GRAY);
-		
-		DJChart djChart = new DJScatterChartBuilder()
-		//chart		
+
+		final DJChart djChart = new DJScatterChartBuilder()
+		//chart
 		.setX(20)
 		.setY(10)
 		.setWidth(500)
@@ -148,23 +150,24 @@ public class ScatterChartBuilderTest extends BaseDjReportTest {
 		.setYAxisFormat(yAxisFormat)
 		.build();
 		drb.addChart(djChart);
-		
-		DJHyperLink djlink = new DJHyperLink();
+
+		final DJHyperLink djlink = new DJHyperLink();
 		djlink.setExpression(new StringExpression() {
-			public Object evaluate(Map fields, Map variables, Map parameters) {				
+			@Override
+            public Object evaluate(Map fields, Map variables, Map parameters) {
 				return "http://thisIsAURL?count=" + variables.get("REPORT_COUNT");
 			}
 		});
-		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));		
+		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));
 		djChart.setLink(djlink);
-		
-		Map<AbstractColumn, JRDesignVariable> vars = new HashMap<AbstractColumn, JRDesignVariable>();
+
+		final Map<AbstractColumn, JRDesignVariable> vars = new HashMap<>();
 		vars.put(columnaQuantity, new JRDesignVariable());
 		vars.put(columnAmount, new JRDesignVariable());
-		JRDesignGroup group = new JRDesignGroup();
+		final JRDesignGroup group = new JRDesignGroup();
 		chart = djChart.transform(new DynamicJasperDesign(), "", group, group, vars, 0);
 	}
-	
+
 	public void testChart() {
 		assertEquals(20, chart.getX());
 		assertEquals(10, chart.getY());
@@ -174,63 +177,64 @@ public class ScatterChartBuilderTest extends BaseDjReportTest {
 		assertEquals(Boolean.TRUE, chart.getShowLegend());
 		assertNotNull(chart.getTitleExpression().getText());
 		assertEquals(Color.DARK_GRAY, chart.getTitleColor());
-		testFont(Font.ARIAL_BIG_BOLD, chart.getTitleFont());		
+		testFont(Font.ARIAL_BIG_BOLD, chart.getTitleFont());
 		assertNotNull(chart.getSubtitleExpression().getText());
 		assertEquals(Color.DARK_GRAY, chart.getSubtitleColor());
 		testFont(Font.COURIER_NEW_BIG_BOLD, chart.getSubtitleFont());
 		assertEquals(Color.DARK_GRAY, chart.getLegendColor());
 		testFont(Font.COURIER_NEW_MEDIUM_BOLD, chart.getLegendFont());
 		assertEquals(Color.WHITE, chart.getLegendBackgroundColor());
-		assertEquals(new Byte(DJChartOptions.EDGE_BOTTOM), chart.getLegendPositionValue().getValueByte() );
-		assertEquals(new Byte(DJChartOptions.EDGE_TOP), chart.getTitlePositionValue().getValueByte());
-		assertEquals(LineStyleEnum.getByValue(new Byte(DJChartOptions.LINE_STYLE_DOTTED)), chart.getLineBox().getPen().getLineStyleValue());
+        assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_BOTTOM], chart.getLegendPosition());
+        assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_TOP], chart.getTitlePosition());
+        assertEquals(LineStyleEnum.values()[DJChartOptions.LINE_STYLE_DOTTED], chart.getLineBox().getPen().getLineStyle());
 		assertEquals(1f, chart.getLineBox().getPen().getLineWidth());
 		assertEquals(Color.DARK_GRAY, chart.getLineBox().getPen().getLineColor());
-		assertEquals(new Integer(5), chart.getLineBox().getPadding());
+		assertEquals(Integer.valueOf(5), chart.getLineBox().getPadding());
 	}
-	
+
 	public void testDataset() {
-		JRDesignXyDataset dataset = (JRDesignXyDataset) chart.getDataset();
+		final JRDesignXyDataset dataset = (JRDesignXyDataset) chart.getDataset();
 		assertEquals(2, dataset.getSeriesList().size());
 		assertNotNull(dataset.getSeries()[0].getLabelExpression().getText());
 		assertNotNull(dataset.getSeries()[0].getSeriesExpression().getText());
 	}
-	
+
 	public void testPlot() {
-		JRDesignScatterPlot plot = (JRDesignScatterPlot) chart.getPlot();
+		final JRDesignScatterPlot plot = (JRDesignScatterPlot) chart.getPlot();
 		assertEquals(Boolean.TRUE, plot.getShowShapes());
 		assertEquals(Boolean.FALSE, plot.getShowLines());
-		
+
 		assertNotNull(plot.getXAxisLabelExpression().getText());
 		testFont(Font.ARIAL_SMALL, plot.getXAxisLabelFont());
-		assertEquals(Color.DARK_GRAY, plot.getXAxisLabelColor());		
+		assertEquals(Color.DARK_GRAY, plot.getXAxisLabelColor());
 		testFont(Font.ARIAL_SMALL, plot.getXAxisTickLabelFont());
 		assertEquals(Color.DARK_GRAY, plot.getXAxisTickLabelColor());
 		assertEquals("#,###.#", plot.getXAxisTickLabelMask());
 		assertEquals(Color.DARK_GRAY, plot.getXAxisLineColor());
-		
+
 		assertNotNull(plot.getYAxisLabelExpression().getText());
 		testFont(Font.ARIAL_SMALL, plot.getYAxisLabelFont());
-		assertEquals(Color.DARK_GRAY, plot.getYAxisLabelColor());		
+		assertEquals(Color.DARK_GRAY, plot.getYAxisLabelColor());
 		testFont(Font.ARIAL_SMALL, plot.getYAxisTickLabelFont());
 		assertEquals(Color.DARK_GRAY, plot.getYAxisTickLabelColor());
 		assertEquals("#,##0.0", plot.getYAxisTickLabelMask());
 		assertEquals(Color.DARK_GRAY, plot.getYAxisLineColor());
 	}
-	
-	public DynamicReport buildReport() throws Exception {		
+
+	@Override
+    public DynamicReport buildReport() throws Exception {
 		return drb.build();
 	}
 
 	private void testFont(Font djFont, JRFont jrFont) {
 		assertEquals(djFont.getFontName(), jrFont.getFontName());
-		assertEquals(djFont.getFontSize(), jrFont.getFontsize());
+		assertEquals(djFont.getFontSize(), jrFont.getFontSize());
 		assertEquals(djFont.isBold(), jrFont.isBold());
 		assertEquals(djFont.isItalic(), jrFont.isItalic());
 	}
-	
+
 	public static void main(String[] args) throws Exception {
-		ScatterChartBuilderTest test = new ScatterChartBuilderTest();
+		final ScatterChartBuilderTest test = new ScatterChartBuilderTest();
 		test.setUp();
 		test.testReport();
 		JasperViewer.viewReport(test.jp);
